# lolprotect

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
lolprotect_core/: Cargo.toml
lolprotect_core/src/: error.rs  util.rs
lolprotect_decrypt/: Cargo.toml
lolprotect_decrypt/src/: app.rs
lolprotect_encrypt/: Cargo.toml
lolprotect_encrypt/src/: app.rs
